k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8282
      targetPort: 8282
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: app
          image: noxy.ddns.net:5000/chat-app/backend:latest
          ports:
            - containerPort: 8282
          imagePullPolicy: Always
