k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gtw
  namespace: chat-app
  annotations:
    "io.cilium/lb-ipam-ips": "172.17.0.2"
    "cert-manager.io/issuer": "ca-issuer"
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: All
      # hostname: "*.pl"
      # tls:
      #   certificateRefs:
      #     - kind: Secret
      #       name: http-beta-chat-app-http
    # - protocol: HTTPS
    #   port: 443
    #   name: https
    #   hostname: "*.pl"
    #   tls:
    #     certificateRefs:
    #       - kind: Secret
    #         name: tls-beta-chat-app-http
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: chat-app
spec:
  parentRefs:
    - name: gtw
      namespace: chat-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          namespace: chat-app
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend
  namespace: chat-app
spec:
  parentRefs:
    - name: gtw
      namespace: chat-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          namespace: chat-app
          port: 8282
      # filters:
      #   - type: URLRewrite
      #     urlRewrite:
      #       path:
      #         replacePrefixMatch: /
      #         type: ReplacePrefixMatch
